--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,11 @@
-/* 1.顶部 */
+/*================================= 1.顶部 ================================= */
 
 
 /* 顶部外层容器 */
 
 .topbar {
     height: 28px;
-    background: rgb(86, 156, 173);
+    background: rgb(0, 0, 0);
 }
 
 
@@ -13,7 +13,7 @@
 
 .topbar .container {
     height: 28px;
-    background: lightblue;
+    background: rgb(0, 0, 0);
 }
 
 
@@ -69,12 +69,15 @@
 }
 
 
-/* 2.导航 */
+/*================================= 2.导航 =================================*/
 
 .nav {
     height: 80px;
     background: rgb(255, 255, 255);
 }
+
+
+/* 搜索购物车订单大容器 */
 
 .nav .serach-shopcart-order {
     margin-top: 5px;
@@ -92,6 +95,9 @@
     position: relative;
 }
 
+
+/* 搜索框中的图标span */
+
 .nav .serach-shopcart-order .serach-input span {
     display: inline-block;
     width: 50px;
@@ -102,6 +108,9 @@
     top: 0;
     background-image: url('/trunk/img/bgicon.png');
 }
+
+
+/* 搜索框 */
 
 .nav .serach-shopcart-order .serach-input .search {
     width: 390px;
@@ -122,6 +131,9 @@
     font-size: 0;
 }
 
+
+/* 购物车订单按钮 */
+
 .nav .serach-shopcart-order .shopcart-order button {
     width: 100px;
     height: 35px;
@@ -130,6 +142,9 @@
     font-size: 12px;
     color: #333;
 }
+
+
+/* 购物车图标*/
 
 .nav .serach-shopcart-order .shopcart-order button:nth-child(1) {
     background: rgb(245, 164, 89);
@@ -140,6 +155,9 @@
     background-size: 20px 20px;
     padding-left: 3px;
 }
+
+
+/* 购物车图标 */
 
 
 /* .nav .serach-shopcart-order .shopcart-order button:nth-child(1) span:first-child {
@@ -170,34 +188,311 @@
     margin-left: 10px;
  } */
 
+
+/* 分类导肮 */
+
 .nav .category-menu {
     margin-top: 15px;
     height: 30px;
-    background: rgb(206, 191, 191);
+}
+
+.nav .category-menu .left-logo {
+    width: 200px;
+    height: 30px;
+    position: relative;
+}
+
+.nav .category-menu .left-logo img {
+    position: absolute;
+    top: -83px;
+    /* bottom: 0; */
+    left: 0;
+}
+
+.nav .category-menu ul {
+    width: 1000px;
+    height: 30px;
+}
+
+.nav .category-menu ul li {
+    float: left;
+    height: 30px;
+    line-height: 30px;
+    width: 80px;
+    color: #333;
+    font-size: 14px;
+    text-align: center;
+    font-weight: 700;
 }
 
 
-/* 3.分类导航和banner */
+/*================================= 3.分类导航和banner =================================*/
 
 .menu {
-    height: 500px;
-    background: rgb(218, 231, 233);
+    height: 430px;
+    /* background: rgb(0, 0, 0); */
+}
+
+.menu .sideMenu {
+    height: 430px;
+    width: 200px;
+}
+
+.menu .sideMenu ul {
+    height: 430px;
+    width: 200px;
+    background: #f3f3f3;
+    position: relative;
+}
+
+.menu .sideMenu ul li {
+    height: 30px;
+    line-height: 30px;
+    width: 200px;
+    /* 缩进 */
+    text-indent: 20px;
+}
+
+.menu .sideMenu ul li a {
+    color: black;
+    /* 消除文字下划线 */
+    text-decoration: none;
+}
+
+.menu .sideMenu ul li:hover {
+    background: rgb(255, 255, 255);
+}
+
+.menu .sideMenu ul li:hover a {
+    color: #ff6700;
+}
+
+.menu .sideMenu ul li .title {
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+}
+
+.menu .sideMenu ul li:hover .title {
+    background: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 99;
+}
+
+.menu .sideMenu ul li:hover .subMenu {
+    display: block;
+}
+
+.menu .sideMenu ul li .subMenu {
+    position: absolute;
+    left: 198px;
+    top: 0;
+    border: 2px solid #ff6700;
+    width: 500px;
+    height: 426px;
+    display: none;
+    z-index: 80;
+    background: rgb(255, 255, 255);
+}
+
+.menu .banner {
+    height: 430px;
+    width: 1000px;
 }
 
 
 /* 4.今日推荐 */
 
 .recommend {
-    height: 500px;
-    background: rgb(187, 235, 240);
+    height: 544px;
+}
+
+
+/* 标题 */
+
+.recommend .title {
+    width: 1200px;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 10px;
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700;
+    background: rgb(255, 255, 255);
+    border-bottom: 6px solid #ff6700;
+}
+
+
+/* 推荐内容 */
+
+.recommend .recommend-content {
+    width: 1190px;
+    height: 498px;
+    margin: 0 auto;
+}
+
+
+/* 列表容器 */
+
+.recommend .recommend-content ul {
+    width: 1190px;
+    height: 498px;
+    margin: 0 auto;
+    background: #ff6700;
+}
+
+
+/* 推荐列表li */
+
+.recommend .recommend-content ul li {
+    width: 196px;
+    height: 247px;
+    background: rgb(255, 255, 255);
+    float: left;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+
+
+/* 整体居中 */
+
+.recommend .recommend-content ul li {
+    text-align: center;
+}
+
+
+/* p标签样式 */
+
+.recommend .recommend-content ul li p {
+    text-align: left;
+    text-indent: 10px;
+    font-size: 14px;
+}
+
+
+/* 限时抢 */
+
+.recommend .recommend-content ul li p.limit-time {
+    text-align: left;
+    text-indent: 0;
+}
+
+
+/* 全国联保 */
+
+.recommend .recommend-content ul li p.text {
+    color: red;
+}
+
+
+/* 价格 */
+
+.recommend .recommend-content ul li p.price {
+    color: red;
+    font-size: 20px;
+    margin-top: 5;
+    /* font-weight: 300; */
 }
 
 
 /* 5.电子书 */
 
 .ebooks {
-    height: 500px;
-    background: rgb(222, 240, 241);
+    height: 496px;
+    margin-top: 34px;
+}
+
+
+/* 左侧盒子 */
+
+.ebooks .left-box {
+    width: 906px;
+    height: 496px;
+}
+
+
+/* 顶部 */
+
+.ebooks .left-box .top {
+    width: 906px;
+    height: 40px;
+    line-height: 40px;
+    background: rgb(255, 255, 255);
+    border-bottom: 6px solid #ff6700;
+}
+
+
+/* 标题 */
+
+.ebooks .left-box .top .title {
+    text-indent: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #ff6700;
+}
+
+
+/* 右侧标题导航 */
+
+.ebooks .left-box .top ul li {
+    float: left;
+    font-size: 18px;
+    width: 100px;
+    text-align: center;
+}
+
+
+/* 右侧激活类 */
+
+.ebooks .left-box .top ul li.active {
+    background: #ff6700;
+    color: white;
+}
+
+
+/* 下部分内容 */
+
+.ebooks .left-box .content {
+    height: 450px;
+    width: 906px;
+    background: #ccc;
+}
+
+
+/* 左侧广告 */
+
+.ebooks .left-box .content .ads {
+    height: 450px;
+    width: 236px;
+    background: #f9f9f9;
+}
+
+
+/*  右侧图书列表 */
+
+.ebooks .left-box .content .ebooks-list {
+    height: 450px;
+    width: 670px;
+    background: #ccc;
+}
+
+.ebooks .left-box .content .ebooks-list ul li {
+    float: left;
+    height: 223px;
+    width: 165px;
+    background: #fff;
+    margin-left: 2px;
+    margin-bottom: 2px;
+}
+
+
+/* 右侧盒子 */
+
+.ebooks .right-box {
+    width: 286px;
+    height: 496px;
+    background: rgb(245, 164, 89);
 }
 
 
