--- a/css/index.css
+++ b/css/index.css
@@ -338,13 +338,13 @@
     }
     /* 左侧盒子 */
     
-    .ebooks .left-box {
+    .ebooks .ebooks-left-box {
         width: 906px;
         height: 496px;
     }
     /* 顶部 */
     
-    .ebooks .left-box .top {
+    .ebooks .ebooks-left-box .ebooks-top {
         width: 906px;
         height: 40px;
         line-height: 40px;
@@ -353,7 +353,7 @@
     }
     /* 标题 */
     
-    .ebooks .left-box .top .title {
+    .ebooks .ebooks-left-box .ebooks-top .ebooks-title {
         text-indent: 24px;
         font-size: 24px;
         font-weight: 300;
@@ -361,7 +361,7 @@
     }
     /* 右侧标题导航 */
     
-    .ebooks .left-box .top ul li {
+    .ebooks .ebooks-left-box .ebooks-top ul li {
         float: left;
         font-size: 18px;
         width: 100px;
@@ -369,42 +369,42 @@
     }
     /* 右侧激活类 */
     
-    .ebooks .left-box .top ul li.active {
+    .ebooks .ebooks-left-box .ebooks-top ul li.active {
         background: #ff6700;
         color: white;
     }
     /* 下部分内容 */
     
-    .ebooks .left-box .content {
+    .ebooks .ebooks-left-box .content {
         height: 450px;
         width: 906px;
         background: #ccc;
     }
     /* 左侧广告 */
     
-    .ebooks .left-box .content .ads {
+    .ebooks .ebooks-left-box .content .ads {
         height: 450px;
         width: 236px;
         background-color: #f9f9f9;
     }
     
-    .ebooks .left-box .content .ads .top-img {
+    .ebooks .ebooks-left-box .content .ads .top-img {
         width: 236px;
         height: 290px;
     }
     
-    .ebooks .left-box .content .ads .bottom-text {
+    .ebooks .ebooks-left-box .content .ads .bottom-text {
         height: 160px;
         width: 236px;
     }
     
-    .ebooks .left-box .content .ads .bottom-text ul {
+    .ebooks .ebooks-left-box .content .ads .bottom-text ul {
         width: 235px;
         height: 160px;
         margin-left: 1px;
     }
     
-    .ebooks .left-box .content .ads .bottom-text ul li {
+    .ebooks .ebooks-left-box .content .ads .bottom-text ul li {
         float: left;
         width: 78px;
         height: 40px;
@@ -413,13 +413,13 @@
     }
     /*  右侧图书列表 */
     
-    .ebooks .left-box .content .ebooks-list {
+    .ebooks .ebooks-left-box .content .ebooks-list {
         height: 450px;
         width: 670px;
         background: #ccc;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li {
         float: left;
         height: 223px;
         width: 165px;
@@ -429,36 +429,36 @@
         text-align: center;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li>p {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li>p {
         text-align-last: left;
         text-indent: 10px;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li>p:first-child {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li>p:first-child {
         font-size: 18px;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li>img {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li>img {
         margin-top: 15px;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li>p:not(:first-child) {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li>p:not(:first-child) {
         color: #ff6700;
     }
     
-    .ebooks .left-box .content .ebooks-list>ul>li>p:last-child {
+    .ebooks .ebooks-left-box .content .ebooks-list>ul>li>p:last-child {
         font-size: 18px;
         margin-top: 15px;
     }
     /* 一个特别的li 将来的轮播容器 */
     
-    .ebooks .left-box .content .ebooks-list ul li:first-child {
+    .ebooks .ebooks-left-box .content .ebooks-list ul li:first-child {
         width: 332px;
         height: 223px;
         background: greenyellow;
     }
     
-    .ebooks .left-box .content .ebooks-list ul li:first-child .pptbox {
+    .ebooks .ebooks-left-box .content .ebooks-list ul li:first-child .pptbox {
         width: 332px;
         height: 223px;
         background: pink;
@@ -986,81 +986,102 @@
     /*================================= 10.推广商品 =================================*/
     
     .promotion {
-        height: 546px;
-        margin-top: 30px;
+        height: 686px;
+        margin-top: 40px;
     }
-    /* 顶部盒子 */
+    /* 顶部盒子 标题 */
     
-    .promotion .top-box {
-        width: 1200px;
+    .promotion .promotion-title {
+        font-size: 24px;
+        text-indent: 20px;
         height: 40px;
         line-height: 40px;
+        color: #ff6700;
+        font-weight: 500;
+        background: #fff;
         border-bottom: 6px solid #ff6700;
     }
-    /* 标题 */
+    /* 页面切换原点*/
     
-    .promotion .title {
-        text-indent: 24px;
-        font-size: 24px;
-        font-weight: 300;
-        color: #ff6700;
+    .promotion .promotion-title ul li {
+        width: 15px;
+        float: left;
+        height: 15px;
+        border-radius: 50%;
+        background: #ccc;
+        margin-top: 20px;
+        margin-right: 10px;
+    }
+    /* 切换页面样式 */
+    
+    .promotion .promotion-title ul li.active {
+        background: #ff6700;
     }
     /* 推荐内容 */
     
-    .promotion .recommend-content {
+    .promotion .promotion-content {
         width: 1200px;
-        height: 498px;
-        margin: 0 auto;
+        height: 640px;
+        background: #fff;
+    }
+    /* 外部盒子 */
+    
+    .promotion .promotion-content .out-box {
+        width: 1170px;
+        height: 600px;
+        margin: 20px auto;
+        /* 超出隐藏 */
+        overflow: hidden;
+    }
+    /* 里面盒子 */
+    
+    .promotion .promotion-content .out-box .inner-box {
+        width: 2340px;
+        height: 600px;
+        /* 定位--相对定位 */
+        position: relative;
+        left: 0;
     }
     /* 列表容器 */
     
-    .promotion .recommend-content ul {
-        width: 1200px;
-        height: 500px;
-        margin: 0 auto;
+    .promotion .promotion-content .promotion-list {
+        width: 1170px;
+        height: 600px;
     }
-    /* 推荐列表li */
     
-    .promotion .recommend-content ul li {
-        width: 235px;
-        height: 247px;
+    .promotion .promotion-content .promotion-list li {
+        width: 214px;
         float: left;
-        margin-left: 2px;
-        margin-bottom: 2px;
-    }
-    /* 整体居中 */
-    
-    .promotion .recommend-content ul li {
+        height: 300px;
+        margin-left: 25px;
+        background-color: #ffffff;
+        box-sizing: border-box;
         text-align: center;
+        padding-top: 25px;
     }
-    /* P标签样式 */
     
-    .promotion .recommend-content ul li p {
+    .promotion .promotion-content .promotion-list li:hover {
+        background-color: #f2f2f2;
+    }
+    
+    .promotion .promotion-content .promotion-list li p {
         text-align: left;
-        text-indent: 10px;
+        text-indent: 50px;
         font-size: 14px;
+        line-height: 25px;
     }
-    /* 限时 */
     
-    .promotion .recommend-content ul li p.limit-time {
-        text-align: left;
-        text-indent: 0;
-    }
-    /* 价格 */
-    
-    .promotion .recommend-content ul li p.price {
+    .promotion .promotion-content .promotion-list li p:nth-child(4) {
         color: red;
-        font-size: 20px;
-        margin-top: 5px;
-        font-weight: bold;
+        font-size: 18px;
     }
-    /* 988 */
     
-    .promotion .recommend-content ul li p span.price {
-        color: red;
-        font-size: 14px;
-        margin-top: 5px;
-        font-weight: 100;
+    .promotion .promotion-content .promotion-list li p:nth-child(5) img {
+        vertical-align: middle;
+    }
+    
+    .promotion .promotion-content .promotion-list li:nth-child(5n+1) {
+        margin-left: 0;
     }
     /*================================= 11.尾部 =================================*/
     /* ---大盒子--- */
@@ -1170,4 +1191,23 @@
         margin-block-start: 1em;
         margin-block-end: 1em;
         font-size: 14px;
+    }
+    /* ---------返回顶部--------- */
+    
+    .backToTop {
+        width: 30px;
+        height: 50px;
+        background: red;
+        /* 定位 */
+        position: fixed;
+        bottom: 100px;
+        left: 610px;
+        margin-left: 50%;
+        /* 默认隐藏 */
+        display: none;
+    }
+    
+    .backToTop img {
+        width: 100%;
+        height: 100%;
     }
