--- a/css/index.css
+++ b/css/index.css
@@ -1192,22 +1192,106 @@
         margin-block-end: 1em;
         font-size: 14px;
     }
-    /* ---------返回顶部--------- */
+    /* ---------二维码--------- */
     
-    .backToTop {
-        width: 30px;
-        height: 50px;
+    .qr-code {
+        width: 40px;
+        height: 180px;
         background: red;
         /* 定位 */
         position: fixed;
-        bottom: 100px;
-        left: 610px;
-        margin-left: 50%;
+        top: 185px;
+        right: 0;
+    }
+    
+    .qr-code p {
+        width: 40px;
+        height: 40px;
+        background: pink;
+    }
+    /* 撑满父容器标签 */
+    
+    .qr-code p img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .qr-code p:nth-child(2) {
+        height: 100px;
+        background: deeppink;
+    }
+    
+    .qr-code div {
+        /* 定位 */
+        position: absolute;
+        top: 40px;
+        left: 0;
+        z-index: -10;
+    }
+    /* --------顶部搜索框交互--------- */
+    /* 整个横条 */
+    
+    .top-search-box {
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        background: rgba(255, 123, 0, .8);
+        /* 定位 */
+        position: fixed;
+        top: 0;
+        left: 0;
         /* 默认隐藏 */
         display: none;
     }
+    /* 搜索框 */
     
-    .backToTop img {
-        width: 100%;
-        height: 100%;
+    .top-search-box .search-box {
+        width: 400px;
+        height: 30px;
+        line-height: 30px;
+        background: #ff6700;
+        margin: 10px auto;
+        background-image: url('/trunk/img/bgicon.png');
+        background-repeat: no-repeat;
+        background-position: 356px -2px;
+    }
+    /* 搜索框可以输入的部分 */
+    
+    .top-search-box .search-box input {
+        height: 26px;
+        width: 360px;
+        border: 2px solid #ff6700;
+        outline: none;
+        text-indent: 10px;
+    }
+    /* --------楼层滚动样式--------- */
+    /* 整体盒子 */
+    
+    .floor {
+        width: 40px;
+        height: 200px;
+        background: #f2f2f2;
+        position: fixed;
+        margin-left: 50%;
+        top: 200px;
+        left: -640px;
+    }
+    
+    .floor li {
+        width: 40px;
+        height: 40px;
+        overflow: hidden;
+        /* 设置过渡效果 */
+        transition: all 0.3s;
+    }
+    
+    .floor li:hover {
+        width: 80px;
+        color: #fff;
+        background: #93d56f;
+    }
+    
+    .floor li img {
+        width: 40px;
+        height: 40px;
     }
