--- a/css/model.css
+++ b/css/model.css
@@ -18,7 +18,8 @@
 .model .content {
     width: 400px;
     height: 250px;
-    background-color: red;
+    font-size: 30px;
+    background-color: white;
     /* 居中 第一种方法 */
     /* position: fixed;
     top: 0;
@@ -39,4 +40,67 @@
     transform: translate(-50%, -50%);
     font-size: 30px;
     color: #fff;
+}
+
+.model .content .top {
+    width: 100%;
+    height: 40px;
+    background-color: #ccc;
+}
+
+.model .content .top .left {
+    margin-left: 20px;
+    color: black;
+    font-size: 24px;
+}
+
+.model .content .top #close {
+    margin-left: 240px;
+    font-size: 30px;
+    color: black;
+}
+
+.model .content .center {
+    font-size: 40px;
+    width: 400px;
+    height: 100px;
+    margin-top: 36px;
+    margin-left: 34px;
+}
+
+.model .content .center span {
+    width: 400px;
+    height: 200px;
+    color: black;
+    text-indent: 30px;
+}
+
+.model .content .center img {
+    width: 60px;
+    height: 60px;
+    margin-left: 60pt;
+    margin-top: 10px;
+}
+
+.model .content .center .text {
+    font-size: 18px;
+}
+
+.model .content .bottom .cancel {
+    margin-left: 70px;
+    width: 120px;
+    height: 30px;
+    font-size: 20px;
+    border: none;
+    background-color: #ccc;
+}
+
+.model .content .bottom .certain {
+    margin-left: 20px;
+    width: 120px;
+    height: 30px;
+    font-size: 20px;
+    background-color: #ff6700;
+    border: none;
+    color: white;
 }
